# amsterdam-schema-api

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: build-aks-image.yml  pre-commit.yml  test.yaml
src/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  initialize_db.sh  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/schema_api/: models.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/schema_api/management/commands/: changelog.py
src/schema_api/migrations/: 0001_initial.py  0002_changelogitem_created_at.py
src/schema_api/openapi/: dataset_example.json  preprocessors.py  schema.py  scope_example.json
src/schema_api/openapi/example_responses/: dataset_example.json  profile_example.json  publisher_example.json
src/schema_api/scripts/: checkout_base_commit.sh  checkout_commit.sh  checkout_commits.sh  checkout_update_commit.sh  clone_ams_schema.sh  generate_diffs.sh  get_diffs.sh
src/tests/: conftest.py  settings.py  test_changelog.py  test_health_check.py  test_views.py  utils.py
src/tests/files/datasets/: bomen.json  gebieden.json  milieu2025.json
src/tests/files/datasets/changelog/: base_dataset.json  create_dataset_version.json  create_table.json  patch_table.json  status_dataset.json  update_experimental_dataset.json  update_table.json  update_table_create_ds.json  update_under_development_dataset.json
src/tests/files/scopes/: openbaar.json
